# xolodilnik_drf_project

./: .env.example  .gitignore  README.md  pyproject.toml
blog/: choices.py  models.py  signals.py
blog/migrations/: 0001_initial.py  0002_initial.py
cart/: models.py
cart/migrations/: 0001_initial.py  0002_initial.py
core/: celery.py  settings.py  urls.py
order/: choices.py  models.py
order/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
payments/: choices.py  models.py
payments/migrations/: 0001_initial.py
products/: models.py
products/migrations/: 0001_initial.py
promotions/: choices.py  models.py
promotions/migrations/: 0001_initial.py  0002_initial.py
users/: manager.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_user_username.py
